--- a/.github/workflows/autodeploy.yml
+++ b/.github/workflows/autodeploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: 检查分支
         uses: actions/checkout@v2
         with:
-          ref: mian #2020年10月后github新建仓库默认分支改为main，注意更改
+          ref: main #2020年10月后github新建仓库默认分支改为main，注意更改
 
       - name: 部署
         uses: cross-the-world/scp-pipeline@master
